# FBNeorageX

./: .gitignore  CMakeLists.txt  CONTROLS.md  FBNeoRageX.desktop  FBNeoRageX_Linux.spec  FBNeoRageX_Windows.spec  FBNeoRageX_Windows_onefile_sd.spec  FBNeoRageX_v1.7.py  README.md  app.rc  build_single_exe.bat  build_steamdeck.sh  build_steamdeck_wsl.bat  build_steamdeck_wsl_helper.sh  build_windows.bat  check.bat  config.json  game_names_db.json  pack_steamdeck_direct.bat  resources.qrc  run_steamdeck.sh  steamdeck_input_guide.txt  test_wsl.bat
.github/workflows/: build.yml  release.yml
assets/shaders/: greyscale.glsl  scanline.glsl
mockup/: index.html
mockup/.claude/: launch.json
relay/: worker.js  wrangler.toml
src/: AppSettings.cpp  AppSettings.h  AudioManager.cpp  AudioManager.h  BorderPanel.cpp  BorderPanel.h  CheatManager.cpp  CheatManager.h  DrcPid.h  EmulatorState.h  GameCanvas.cpp  GameCanvas.h  GameNamesDb.h  GamepadManager.cpp  GamepadManager.h  LibretroCore.cpp  LibretroCore.h  MainWindow.cpp  MainWindow.h  NetplayManager.cpp  NetplayManager.h  StunClient.cpp  StunClient.h  UPnpMapper.cpp  UPnpMapper.h  VideoRecorder.cpp  VideoRecorder.h  libretro.h  main.cpp
